<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context="com.hanna.agriculture.activity.AllFieldsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fields_menu"
            android:layout_width="90dp"
            android:layout_height="145dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:onClick="allFieldsActivity"
            android:rotation="270"
            android:text="@string/fields_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_menu"
            tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

        <TextView
            android:id="@+id/main_menu"
            android:layout_width="90dp"
            android:layout_height="145dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:onClick="mainActivity"
            android:rotation="270"
            android:text="@string/main_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@color/asideBgColor"
            android:contentDescription="@string/text_settings"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_settings" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="656dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.hanna.agriculture.activity.AllFieldsActivity">


        <TextView
            android:id="@+id/fields_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:text="@string/fields_text"
            android:textColor="@color/logoOfFields"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/fields_lv"
            app:layout_constraintEnd_toStartOf="@+id/addField_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addField_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/mainBgColor"
            android:contentDescription="@string/addField_hint"
            android:onClick="addFieldActivity"
            app:layout_constraintBottom_toTopOf="@+id/fields_lv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fields_title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_circle"
            tools:ignore="TouchTargetSizeCheck" />


        <ListView
            android:id="@+id/fields_lv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addField_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fields_title"
            tools:listitem="@layout/field_list_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
